# content-extractor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/content_extractor/: __init__.py  base.py  browser.py  cli.py  hooks.py  html_utils.py  registry.py  utils.py
src/content_extractor/adapters/: __init__.py  agenticcoding.py  catalog.py  drive.py  excalidraw.py  generic_web.py  medium.py  notion.py  substack.py  youtube.py
tests/: test_hooks.py  test_registry.py  test_url_detection.py  test_youtube_channel.py
