[project]
name = "content-extractor"
version = "0.1.0"
description = "Pluggable content extraction framework — Extract stage of a knowledge ETL pipeline"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "yt-dlp[curl-cffi]>=2026.2.4",
]

[project.scripts]
content-extract = "content_extractor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_extractor"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
